<resources>
    <string name="app_name">Talentio</string>
    <string name="talentio">Talentio</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="city">City</string>
    <string name="instructor">Instructor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating_parameter_1">Knowledge of the subject:</string>
    <string name="rating_parameter_2">Interactiveness of session:</string>
    <string name="rating_parameter_3">Problem solving skills:</string>
    <string name="rating_parameter_4">Value of time:</string>
    <string name="rating_parameter_5">Helping the students:</string>
</resources>
